added video link

--- a/README
+++ b/README
@@ -9,9 +9,8 @@ Encounter doors and solve math problems to unlock them.
 Reach the goal to win the game!
 The purpose of writing this software is to practice and refine my programming skills, including user interaction, graphical rendering, and game logic, while producing a project that is both functional and educational.
 
-{Provide a link to your YouTube demonstration.  It should be a 4-5 minute demo of the game being played and a walkthrough of the code.}
 
-[Software Demo Video](http://youtube.link.goes.here)
+[Software Demo Video](https://youtu.be/sJMken6A2LA)
 
 # Development Environment
 
